# camera-repository-myself-opencv-mat-h264-encoder-decoder-V1-cpp-h264

./: README.md
H264编码+H264解码/: H264EncoderDemo.cpp
H264解码/: h264decoder.cpp  h264decoder.h
ffmpeg拉流测试/: readme.md
ffmpeg拉流测试/ffmpeg将H264解码为RGB/: CmakeLists.txt  main.cpp
ffmpeg拉流测试/linux下的拉流/: CMakeLists.txt  main.cpp  编译.txt
ffmpeg拉流测试/多线程拉流/: main.cpp  transdata.cpp  transdata.h
ffmpeg拉流测试/引入ROS/src/msg_test/recnode/src/: rec_msg.cpp
matH264/: h264encoder.cpp  h264encoder.h
matX264/: x264_encoder.cpp  x264_encoder.h
x264编码+H264解码/: CMakeLists.txt  X264EncoderDemo.cpp  readme.md
